1200px, 992px, 568px update

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <header>
       <nav class="nav-bar">
         <div class="sign">
-          <a href="#home"><h1>Shantanu Dutta</h1></a>
+          <a href="#home"
+            ><span class="no-wrap"><h1>Shantanu Dutta</h1></span></a
+          >
         </div>
 
         <div class="total-list">
@@ -45,6 +47,9 @@
             <!-- <li><a href="#achievements">Acheivements</a></li> -->
             <li><a href="#connect">Connect me</a></li>
           </ul>
+          <button class="menu-button">
+            <div class="menu-icon"></div>
+          </button>
         </div>
       </nav>
     </header>
@@ -54,7 +59,11 @@
       <!-- section 1>> HOME -->
       <section class="home display-bottom" id="home">
         <div class="left-info">
-          <h3>This is <span class="linear-gradient-name">Shanatanu</span></h3>
+          <span class="no-wrap"
+            ><h3>
+              This is <span class="linear-gradient-name">Shanatanu</span>
+            </h3></span
+          >
           <div>I am a student &</div>
           <span id="element" class="purple"></span>
 
