--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </div>
 
         <div class="total-list">
-            <button class="menu-button">
-                <div class="menu-icon"></div>
-             </button>
+          <button class="menu-button">
+            <div class="menu-icon"></div>
+          </button>
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -50,7 +50,6 @@
             <!-- <li><a href="#achievements">Acheivements</a></li> -->
             <li><a href="#connect">Connect me</a></li>
           </ul>
-         
         </div>
       </nav>
     </header>
@@ -162,53 +161,77 @@
         </div>
       </section>
 
+      <hr id="display-548px" />
+
       <section class="tech heading-h1-span display-bottom">
         <h1>Tech-Skills</h1>
         <span class="grey">check my tech knowledge</span>
         <div class="box">
           <div class="verticle-line">
-            <img src="cpp.png" alt="" class="img-logo" />
+            <img src="cpp.png" alt="" class="img-logo" width="80" height="80" />
             <span>C++</span>
             <span class="link"
               ><a href="https://leetcode.com/shantanu49/"
-                ><img src="./leetcode.png" alt="" /></a
+                ><img src="./leetcode.png" alt="" width="30" height="30" /></a
             ></span>
           </div>
           <div class="verticle-line">
-            <img src="c.png" alt="" class="img-logo" />
+            <img src="c.png" alt="" class="img-logo" width="80" height="80" />
             <span>C Lan.</span>
             <span class="link"
               ><a
                 href="https://auth.geeksforgeeks.org/user/shantanuofdkxd/practice"
-                ><img src="./leetcode.png" alt="" /></a
+                ><img src="./leetcode.png" alt="" width="30" height="30" /></a
             ></span>
           </div>
           <div class="verticle-line">
-            <img src="github.png" alt="" class="img-logo" />
+            <img
+              src="github.png"
+              alt=""
+              class="img-logo"
+              width="80"
+              height="80"
+            />
             <span>GitHub</span>
             <span class="link"
-              ><a href="#"><img src="./leetcode.png" alt="" /></a
+              ><a href="#"
+                ><img src="./leetcode.png" alt="" width="30" height="30" /></a
             ></span>
           </div>
           <div class="verticle-line">
-            <img src="html.png" alt="" class="img-logo" />
+            <img
+              src="html.png"
+              alt=""
+              class="img-logo"
+              width="80"
+              height="80"
+            />
             <span>HTML</span>
             <span class="link"
-              ><a href="#"><img src="./leetcode.png" alt="" /></a
+              ><a href="#"
+                ><img src="./leetcode.png" alt="" width="30" height="30" /></a
             ></span>
           </div>
           <div class="verticle-line">
-            <img src="css.png" alt="" class="img-logo" />
+            <img src="css.png" alt="" class="img-logo" width="80" height="80" />
             <span>CSS</span>
             <span class="link"
-              ><a href="#"><img src="./leetcode.png" alt="" /></a
+              ><a href="#"
+                ><img src="./leetcode.png" alt="" width="30" height="30" /></a
             ></span>
           </div>
           <div class="verticle-line">
-            <img src="gcloud.png" alt="" class="img-logo" />
+            <img
+              src="gcloud.png"
+              alt=""
+              class="img-logo"
+              width="80"
+              height="80"
+            />
             <span>Quicklab</span>
             <span class="link"
-              ><a href="#"><img src="./leetcode.png" alt="" /></a
+              ><a href="#"
+                ><img src="./leetcode.png" alt="" width="30" height="30" /></a
             ></span>
           </div>
         </div>
