548 project section update

--- a/index.html
+++ b/index.html
@@ -170,19 +170,16 @@
           <div class="verticle-line">
             <img src="cpp.png" alt="" class="img-logo" width="80" height="80" />
             <span>C++</span>
-            <span class="link"
-              ><a href="https://leetcode.com/shantanu49/"
-                ><img src="./leetcode.png" alt="" width="30" height="30" /></a
-            ></span>
+            <span class="link">
+              &#x2022; DSA || &#x2022; Leetcode || &#x2022; GFG
+            </span>
           </div>
           <div class="verticle-line">
             <img src="c.png" alt="" class="img-logo" width="80" height="80" />
             <span>C Lan.</span>
-            <span class="link"
-              ><a
-                href="https://auth.geeksforgeeks.org/user/shantanuofdkxd/practice"
-                ><img src="./leetcode.png" alt="" width="30" height="30" /></a
-            ></span>
+            <span class="link">
+              &#x2022; Satrted my journey with this.
+            </span>
           </div>
           <div class="verticle-line">
             <img
@@ -193,10 +190,9 @@
               height="80"
             />
             <span>GitHub</span>
-            <span class="link"
-              ><a href="#"
-                ><img src="./leetcode.png" alt="" width="30" height="30" /></a
-            ></span>
+            <span class="link">
+              &#x2022;Open Source Contributor.
+            </span>
           </div>
           <div class="verticle-line">
             <img
@@ -207,18 +203,16 @@
               height="80"
             />
             <span>HTML</span>
-            <span class="link"
-              ><a href="#"
-                ><img src="./leetcode.png" alt="" width="30" height="30" /></a
-            ></span>
+            <span class="link">
+              &#x2022; HTML5 || &#x2022;Intermidiate
+            </span>
           </div>
           <div class="verticle-line">
             <img src="css.png" alt="" class="img-logo" width="80" height="80" />
             <span>CSS</span>
-            <span class="link"
-              ><a href="#"
-                ><img src="./leetcode.png" alt="" width="30" height="30" /></a
-            ></span>
+            <span class="link">
+              &#x2022; Intermidiate learner.
+            </span>
           </div>
           <div class="verticle-line">
             <img
@@ -229,10 +223,9 @@
               height="80"
             />
             <span>Quicklab</span>
-            <span class="link"
-              ><a href="#"
-                ><img src="./leetcode.png" alt="" width="30" height="30" /></a
-            ></span>
+            <span class="link">
+              &#x2022; G-Cloud contributor || &#x2022; Arcade Program.
+            </span>
           </div>
         </div>
       </section>
