--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
     <footer>
       <div class="footer" id="connect">
         <div class="footer-first">
-          <img src="./me.png" alt="" />
+          <img src="./me.png" alt="" width="35px" height="35px" />
           <h3>Shantanu's Portfolio</h3>
         </div>
-        <div class="footer-secind">
+        <div class="footer-second">
           <ul>
             <li>Home</li>
             <li>About</li>
