373 display block problem

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
           <div class="verticle-line">
             <img src="cpp.png" alt="" class="img-logo" width="80" height="80" />
             <span>C++</span>
+            <button class="btn">View <i class="fa fa-eye"></i></button>
             <span class="link">
               &#x2022; DSA || &#x2022; Leetcode || &#x2022; GFG
             </span>
@@ -177,6 +178,7 @@
           <div class="verticle-line">
             <img src="c.png" alt="" class="img-logo" width="80" height="80" />
             <span>C Lan.</span>
+            <button class="btn">View <i class="fa fa-eye"></i></button>
             <span class="link">
               &#x2022; Satrted my journey with this.
             </span>
@@ -190,6 +192,7 @@
               height="80"
             />
             <span>GitHub</span>
+            <button class="btn">View <i class="fa fa-eye"></i></button>
             <span class="link">
               &#x2022;Open Source Contributor.
             </span>
@@ -203,6 +206,7 @@
               height="80"
             />
             <span>HTML</span>
+            <button class="btn">View <i class="fa fa-eye"></i></button>
             <span class="link">
               &#x2022; HTML5 || &#x2022;Intermidiate
             </span>
@@ -210,6 +214,7 @@
           <div class="verticle-line">
             <img src="css.png" alt="" class="img-logo" width="80" height="80" />
             <span>CSS</span>
+            <button class="btn">View <i class="fa fa-eye"></i></button>
             <span class="link">
               &#x2022; Intermidiate learner.
             </span>
@@ -223,6 +228,7 @@
               height="80"
             />
             <span>Quicklab</span>
+            <button class="btn">View <i class="fa fa-eye"></i></button>
             <span class="link">
               &#x2022; G-Cloud contributor || &#x2022; Arcade Program.
             </span>
