Added hire me button

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 
           <div id="full-socio">
             <span id="about-down" class="about-me">Connect me</span>
+            <a href="tel:9093446447" id="hire-btn">Hire me</a>
+
             <div class="social-handle">
               <ul>
                 <li>
@@ -90,19 +92,6 @@
                 <li>
                   <a href=""
                     ><img src="instagram.png" alt="" class="social-img"
-                  /></a>
-                </li>
-                <li>
-                  <a href=""><img src="fb.png" alt="" class="social-img" /></a>
-                </li>
-                <li>
-                  <a href=""
-                    ><img src="telegram.png" alt="" class="social-img"
-                  /></a>
-                </li>
-                <li>
-                  <a href=""
-                    ><img src="discord.png" alt="" class="social-img"
                   /></a>
                 </li>
               </ul>
@@ -360,7 +349,10 @@
     <script>
       var typed = new Typed("#element", {
         strings: ["DSA solver", "frontend developer", "warm learner"],
-        typeSpeed: 50
+        loop: true,
+        typeSpeed: 100,
+        backspeed: 80,
+        backdelay: 1000
       });
     </script>
   </body>
