Developed by babbar project section and added faded text

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
           <div id="full-socio">
             <span id="about-down" class="about-me">Connect me</span>
-            <a href="tel:9093446447" id="hire-btn">Hire me</a>
+            <span id="hire-btn">Hire Me</span>
 
             <div class="social-handle">
               <ul>
@@ -100,6 +100,7 @@
         </div>
 
         <div class="right-img">
+          <span class="faded-text" id="fade-name">ABOUT</span>
           <img src="png.webp" width="400" height="400" />
         </div>
       </section>
@@ -155,6 +156,7 @@
       <section class="tech heading-h1-span display-bottom">
         <h1>Tech-Skills</h1>
         <span class="grey">check my tech knowledge</span>
+        <span class="faded-text" id="fade-tech">Technology</span>
         <div class="box">
           <div class="verticle-line">
             <img src="cpp.png" alt="" class="img-logo" width="80" height="80" />
@@ -233,7 +235,10 @@
         <div class="flex-box">
           <a href="https://github.com/Shantanu-Meta/FlameNWok">
             <div class="single-warap">
-              <img width="350" height="150" src="Flamenwok.png" alt="" />
+              <div class="faded-box">
+                <span>Exploring</span>
+                <img width="350" height="150" src="Flamenwok.png" alt="" />
+              </div>
               <div class="head-desc">
                 <h3>Flame N Wok</h3>
                 <p>
@@ -248,7 +253,10 @@
           </a>
           <a href="https://github.com/Shantanu-Meta/typing-test">
             <div class="single-warap">
-              <img width="350" height="150" src="typingtest.png" alt="" />
+              <div class="faded-box">
+                <span>Exploring</span>
+                <img width="350" height="150" src="typingtest.png" alt="" />
+              </div>
               <div class="head-desc">
                 <h3>Typing-test</h3>
                 <p>
@@ -264,7 +272,10 @@
           </a>
           <a href="https://github.com/Shantanu-Meta/OTT">
             <div class="single-warap">
-              <img width="350" height="150" src="ott.png" alt="" />
+              <div class="faded-box">
+                <span>Exploring</span>
+                <img width="350" height="150" src="ott.png" alt="" />
+              </div>
               <div class="head-desc">
                 <h3>OTT Platform</h3>
                 <p>
@@ -280,7 +291,10 @@
           </a>
           <a href="https://github.com/Shantanu-Meta/All-Calc">
             <div class="single-warap">
-              <img width="350" height="150" src="allcalc.png" alt="" />
+              <div class="faded-box">
+                <span>Exploring</span>
+                <img width="350" height="150" src="allcalc.png" alt="" />
+              </div>
               <div class="head-desc">
                 <h3>All~Calc</h3>
                 <p>
