Developed contact me form

--- a/index.html
+++ b/index.html
@@ -308,6 +308,68 @@
               </div>
             </div>
           </a>
+          <a href="https://shantanu-meta.github.io/Shantanu-portfolio/">
+            <div class="single-warap">
+              <div class="faded-box">
+                <span>Exploring</span>
+                <img width="350" height="150" src="portfolio.jpg" alt="" />
+              </div>
+              <div class="head-desc">
+                <h3>Portfolio</h3>
+                <p>
+                  This is mmy portfolio, where you can explore more about me.
+                </p>
+              </div>
+              <div class="go-link">
+                <button>GitHub <i class="fa fa-github"></i></button>
+              </div>
+            </div>
+          </a>
+        </div>
+      </section>
+
+      <hr />
+      <section class="contact-section">
+        <div class="contact-section-container">
+          <h1 class="contact-me">Contact Me</h1>
+          <p class="contact-me-desc grey">Thoughts? I want to explore.</p>
+
+          <div class="contact-me-form">
+            <form action="">
+              <div class="form-input">
+                <input
+                  type="text"
+                  name="name"
+                  id=""
+                  class="formfield"
+                  placeholder="Entet name"
+                />
+                <input
+                  type="email"
+                  name="email"
+                  id=""
+                  class="formfield"
+                  placeholder="Entet email"
+                />
+                <input
+                  type="text"
+                  name="subject"
+                  id=""
+                  class="formfield"
+                  placeholder="Entet reason"
+                />
+                <textarea
+                  name="message"
+                  class="formfield"
+                  id="text-area"
+                  cols="30"
+                  rows="10"
+                  placeholder="Enter your thoughts/ queries"
+                ></textarea>
+              </div>
+              <div class="button">Send <i class="ri-send-plane-fill"></i></div>
+            </form>
+          </div>
         </div>
       </section>
     </main>
