Modified mpobile view

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               This is <span class="linear-gradient-name">Shanatanu</span>
             </h3></span
           >
-          <div>A student &</div>
+          <div>A CS student &</div>
           <span id="element" class="purple"></span>
 
           <div id="full-socio">
