made the tech section responsive

--- a/index.html
+++ b/index.html
@@ -390,6 +390,77 @@
             </div>
           </div>
         </div>
+
+        <div class="out-container-phone">
+            <div class="tech-stack">
+              <h3>DSA</h3>
+              <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" class="group-hover:drop-shadow-[0px_0px_10px_rgba(10,10,10,1)] group-hover:stroke-none stroke-1 stroke-[#525a76] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG" style="stroke-opacity: 0.8;">
+                <path d="m 0 6 
+                  a 6 6 0 0 1 6 -6 
+                  h 250.32501220703125 
+                  a 16 16 0 0 1 11 5 
+                  l 77 77 
+                  a 16 16 0 0 1 5 11 
+                  v 126 
+                  a 6 6 0 0 1 -6 6 
+                  h -337.32501220703125 
+                  a 6 6 0 0 1 -6 -6 
+                  z" fill="#181C2E">
+                </path>
+              </svg>
+              <div class="data">
+                <img src="./assets/cpp.png" alt="" class="img-logo" width="80" height="80" />
+                <img src="./assets/c.png" alt="" class="img-logo" width="80" height="80" />
+              </div>
+            </div>
+            <div class="tech-stack">
+              <h3>Front-end</h3>
+              <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" class="group-hover:drop-shadow-[0px_0px_10px_rgba(10,10,10,1)] group-hover:stroke-none stroke-1 stroke-[#525a76] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG" style="stroke-opacity: 0.8;">
+                <path d="m 0 6 
+                  a 6 6 0 0 1 6 -6 
+                  h 250.32501220703125 
+                  a 16 16 0 0 1 11 5 
+                  l 77 77 
+                  a 16 16 0 0 1 5 11 
+                  v 126 
+                  a 6 6 0 0 1 -6 6 
+                  h -337.32501220703125 
+                  a 6 6 0 0 1 -6 -6 
+                  z" fill="#181C2E">
+                </path>
+              </svg>
+              <div class="data">
+                <img src="./assets/html.png" alt="" class="img-logo" width="80" height="80" />
+                <img src="./assets/css.png" alt="" class="img-logo" width="80" height="80" />
+                <img src="./assets/css.png" alt="" class="img-logo" width="80" height="80" />
+              </div>
+            </div>
+            <div class="tech-stack">
+              <h3>Tools</h3>
+              <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" class="group-hover:drop-shadow-[0px_0px_10px_rgba(10,10,10,1)] group-hover:stroke-none stroke-1 stroke-[#525a76] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG" style="stroke-opacity: 0.8;">
+                <path d="m 0 6 
+                  a 6 6 0 0 1 6 -6 
+                  h 250.32501220703125 
+                  a 16 16 0 0 1 11 5 
+                  l 77 77 
+                  a 16 16 0 0 1 5 11 
+                  v 126 
+                  a 6 6 0 0 1 -6 6 
+                  h -337.32501220703125 
+                  a 6 6 0 0 1 -6 -6 
+                  z" fill="#181C2E">
+                </path>
+              </svg>
+              <div class="data">
+                <img src="./assets/github.png" alt="" class="img-logo" width="80" height="80" />
+                <img src="./assets/gcloud.png" alt="" class="img-logo" width="80" height="80" />
+              </div>
+            </div>
+        </div>
+      </section>
+
+      <section class="">
+
       </section>
       <hr />
 
